# PDG1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clang-format.txt  partitions.csv  sdkconfig
components/: CMakeLists.txt  README.md
components/runnable/: CMakeLists.txt
components/runnable/include/: ledcRunnable.h  llcRunnable.h  ticRunnable.h
components/runnable/include/base/: runnable.h
components/runnables/: CMakeLists.txt
components/runnables/certs/: deviceid.txt  endpoint.txt
components/runnables/dcm/include/: dcmRunnable.h
components/runnables/dcm/include/config/: aws_config.h  ota_config.h  wifi_config.h
components/runnables/dcm/include/delegate/aws/: aws.h  aws_utils.h
components/runnables/dcm/include/delegate/ota/: otadelegate.h
components/runnables/dcm/include/delegate/wifi/: wifidelegate.h
components/runnables/dcm/include/handler/: awsHandler.h  otaHandler.h  wifiHandler.h
components/runnables/dcm/include/hw/: hwconfig.h  wifidelegate.h
components/runnables/dcm/include/input/: dcm_input.h
components/runnables/dcm/include/output/: dcm_output.h
components/runnables/dcm/include/wifi/: wificonfig.h  wifidelegate.h
components/runnables/dcm/src/: dcmRunnable.cpp
components/runnables/dcm/src/aws/: aws.cpp
components/runnables/ledc/include/: ledcRunnable.h
components/runnables/ledc/include/algo/: VFHandler.h  algoconfig.h
components/runnables/ledc/include/hw/: hwconfig.h  hwdelegate.h  tools.h
components/runnables/ledc/include/input/: ledc_input.h
components/runnables/ledc/include/output/: ledc_output.h
components/runnables/ledc/include/storage/: storage.h
components/runnables/ledc/src/: ledcRunnable.cpp
components/runnables/llc/include/: llcRunnable.h
components/runnables/llc/include/hw/: hwconfig.h  hwdelegate.h
components/runnables/llc/include/input/: llc_input.h
components/runnables/llc/include/output/: llc_output.h
components/runnables/llc/include/storage/: storage.h
components/runnables/llc/src/: llcRunnable.cpp
components/runnables/tic/include/: ticRunnable.h
components/runnables/tic/include/hw/: IQS263B.h  IQS263Config.h  IQS263DeviceData.h  IQS263DeviceHandler.h
components/runnables/tic/include/output/: tic_output.h
components/runnables/tic/src/: ticRunnable.cpp
components/runnables/tic/src/hw/: IQS263B.cpp
components/tasks/: CMakeLists.txt  llc.h
components/tasks/include/: dcm.h  ledc.h  llc.h  tic.h
main/: App.cpp  App.h  CMakeLists.txt  Kconfig.projbuild  main.cpp
